--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <title>Sorteador</title>
+  <title>Cartaz Promocional</title>
   <link rel="stylesheet" href="assets/css/reset.css">
   <link rel="stylesheet" href="assets/css/style.css">
   <link rel="preconnect" href="https://fonts.gstatic.com">
@@ -17,7 +17,7 @@
         <div class="header__wrapper">
           <div class="header__logo">
             <a href="#" class="header__logo-link"><img src="assets/img/logo.png" alt="logo" class="header__logo-pic"></a>
-            <p class="header__logo-text">Sorteador</p>
+            <p class="header__logo-text">Cartaz Promocional</p>
           </div>
 
         </div>
@@ -25,9 +25,9 @@
     </header>
     <section class="survival">
       <div class="wrapper">
-        <h1 class="survival__title">Sorteador de números para sorteio</h1>
-        <p class="survival__subtitle">Organize e realize seus sorteios de forma rápida e simples, venha conhecer nosso app.</p>
-        <button type="submit" class="survival__button"><a href="https://play.google.com/store/apps/details?id=com.rslima.prize_draw">Baixar App</a></button>
+        <h1 class="survival__title">Criador de cartazes promocionais</h1>
+        <p class="survival__subtitle">Criador de cartazes promocionais de forma prática, rápida e gratuita. Edite Layout prontos e imprima para promover seus produtos.</p>
+        <button type="submit" class="survival__button"><a href="https://play.google.com/store/apps/details?id=com.rslima.promotion_poster">Baixar App</a></button>
       </div>
     </section>
   </section>
@@ -38,7 +38,7 @@
           <div class="footer__logo-nav">
             <div class="footer__logo">
               <a href="#" class="footer__logo-link"><img src="assets/img/logo.png" alt="logo" class="footer__logo-pic"></a>
-              <p class="footer__logo-text">Sorteador</p>
+              <p class="footer__logo-text">Cartaz Promocional</p>
             </div>
           <div class="footer__nav">
        
